Field encapsulation